worked on resizing homepage

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
 					<img
-						src="images/Screenshot 2023-11-29 at 11.12.16 PM.png"
+						src="./images/shield-in-circle.svg"
 						alt="Logo"
 						height="100"
 					/>
@@ -198,10 +198,10 @@
 		</div>
 		<!-- Leaderboard -->
 		<!-- referenced this page: https://cmubuggy.org/history/raceday/2023 -->
-		<div class="container-fluid row gx-5 leaderboardNSchedule">
-			<div class="col-8">
+		<div class="container-fluid row  leaderboardNSchedule">
+			<div class=" col-11 col-sm-12 col-lg-7">
 				<div class="row leaderboardHeading">
-					<h2 class="col-3">Leaderboard</h2>
+					<h2 class="col-5 col-lg-4">Leaderboard</h2>
 					<a class="col additionalLink">see full version</a>
 				</div>
 				<div class="leaderboardTabs">
@@ -285,8 +285,12 @@
 					</table>
 				</div>
 			</div>
+            <div class="dividerContainer col-12">
+                <div class="divider"></div>
+            </div>
+
 			<!-- schedule at a glance -->
-			<div class="col schedule">
+			<div class="col-12 col-lg schedule">
 				<div class="row">
 					<h2 class="col-12">Schedule at a Glance</h2>
 					<a class="col-12">see Spring Carnival Schedule</a>
@@ -295,7 +299,7 @@
 				<div class="schedule">
 					<h3>Thursday, April 13</h3>
 					<div class="horizontalCards row">
-						<div class="col-3 cardImg">
+						<div class="col-3 col-lg-5 cardImg">
 							<img src="./images/buggyDesigns.jpeg" alt="buggy designs" />
 						</div>
 						<div class="customCardBody col">
@@ -309,7 +313,7 @@
 						</div>
 					</div>
 					<div class="horizontalCards row">
-						<div class="col-3 cardImg">
+						<div class="col-3 col-lg-5 cardImg">
 							<img
 								src="./images/randomFoodPexels.jpg"
 								alt="food image taken from Pexels.com"
@@ -325,7 +329,7 @@
 						</div>
 					</div>
 					<div class="horizontalCards row">
-						<div class="col-3 cardImg">
+						<div class="col-3 col-lg-5 cardImg">
 							<img
 								src="./images/auction.jpg"
 								alt="food image taken from Pexels.com"
@@ -348,10 +352,10 @@
 			<div class="divider"></div>
 		</div>
 		<!-- raceday resources -->
-		<div class="container-fluid row gx-5 racedayResources">
+		<div class="container-fluid row racedayResources">
 			<h2>Raceday Resources</h2>
-			<div class="row gx-5">
-                <div class="col-4">
+			<div class="row">
+                <div class="col-4 indCardDiv">
                     <div class="card">
                         <div class="iconImgContainer card-img-top">
                             <img class="iconImg" src="./images/calendarIcon.png"  alt="calendar icon from FreeIconsPNG" />
@@ -364,7 +368,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 indCardDiv">
                     <div class="card">
                         <div class="iconImgContainer card-img-top">
                             <img class="iconImg" src="./images/rosterIcon.png"  alt="roster icon" />
@@ -377,7 +381,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 indCardDiv">
                     <div class="card">
                         <div class="iconImgContainer card-img-top">
                             <img class="iconImg" src="./images/photoIcon.png"  alt="photo icon" />
