--- a/index.html
+++ b/index.html
@@ -31,84 +31,58 @@
 		/>
 	</head>
 	<body>
-		<div class="header-top">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6">
-						<span>CMU BUGGY ALUMNI ASSOCIATION</span>
-					</div>
-					<div class="col-md-6 race-info">
-						<span>Race Day in 2024: Apr 12 - 13</span>
-					</div>
-				</div>
-			</div>
-		</div>
 
-		<nav class="navbar navbar-expand-lg">
-			<!-- logo section-->
-			<div class="container">
-				<a class="navbar-brand" href="index.html">
-					<img
-						src="./images/shield-in-circle.svg"
-						alt="Logo"
-						height="100"
-					/>
-				</a>
-				<!-- navbar section -->
-				<button
-					class="navbar-toggler"
-					type="button"
-					data-toggle="collapse"
-					data-target="#navbarNavDropdown"
-					aria-controls="navbarNavDropdown"
-					aria-expanded="false"
-					aria-label="Toggle navigation"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNavDropdown">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item active">
-							<a class="nav-link" href="#">News</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="whatisbuggy.html">What is Buggy</a>
-						</li>
-						<li class="nav-item dropdown">
-							<a
-								class="nav-link dropdown-toggle"
-								href="history.html"
-								id="navbarDropdownMenuLink"
-								data-toggle="dropdown"
-								aria-haspopup="true"
-								aria-expanded="false"
-							>
-								History
-							</a>
-							<div
-								class="dropdown-menu"
-								aria-labelledby="navbarDropdownMenuLink"
-							>
-								<a class="dropdown-item" href="#">Past Race Results</a>
-								<a class="dropdown-item" href="#"
-									>Buggies and Buggy Organizations</a
-								>
-								<a class="dropdown-item" href="#">Media</a>
-								<a class="dropdown-item" href="#"
-									>Our 100 Years of Buggy Blog Series</a
-								>
-							</div>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">About BAA</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Gallery</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
+		<div class="header-top">
+            <div class="container-fluid"> <!-- Changed to container-fluid for full width -->
+              <div class="row">
+                <div class="col-12 col-md-6"> <!-- Responsive columns -->
+                  <span>CMU BUGGY ALUMNI ASSOCIATION</span>
+                </div>
+                <div class="col-12 col-md-6 text-md-right race-info"> <!-- Text alignment changes on medium devices -->
+                  <span>Race Day in 2024: Apr 12 - 13</span>
+                </div>
+              </div>
+            </div>
+          </div>
+            
+          <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid"> <!-- Changed to container-fluid -->
+              <a class="navbar-brand" href="index.html">
+                <img src="./images/shield-in-circle.svg" alt="Logo" height="100" class="img-fluid"> <!-- img-fluid for responsive image -->
+              </a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">News</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="whatisbuggy.html">What is Buggy</a>
+                    </li>
+                    <li class="nav-item dropdown nav-fill">
+                      <a class="nav-link dropdown-toggle" href="history.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        History
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">Past Race Results</a>
+                        <a class="dropdown-item" href="#">Buggies and Buggy Organizations</a>
+                        <a class="dropdown-item" href="#">Media</a>
+                        <a class="dropdown-item" href="#">Our 100 Years of Buggy Blog Series</a>
+                      </div>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">About BAA</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Gallery</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+          
+            </nav>
 		<!-- carousel -->
 		<div
 			id="racedayCarousel"
