made some edits to mobile view of homepage

--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
 						</div>
 					</button>
 				</div>
-                <div class="col-12">
+				<div class="col-12">
 					<button class="outsetBtn" type="button">
 						<div class="row">
 							<div class="col-2 btnIconImgContainer">
@@ -580,17 +580,157 @@
 					</button>
 				</div>
 			</div>
-            <!-- membership types -->
-            <div class="row membershipsContainer gy-2">
-                <div class="col-12">
-                    <p>Annual Membership –– $20+</p>
-                    <button class="outsetBtn">Get Annual Membership</button>
-                </div>
-                <div class="col-12">
-                    <p>Golden Goose Lifetime Membership –– $1,000+</p>
-                    <button class="outsetBtn">Get Lifetime Membership</button>
-                </div>
-            </div>
+			<!-- membership types -->
+			<div class="row membershipsContainer gy-2">
+				<div class="col-12">
+					<p>Annual Membership –– $20+</p>
+					<button class="outsetBtn">Get Annual Membership</button>
+				</div>
+				<div class="col-12">
+					<p>Golden Goose Lifetime Membership –– $1,000+</p>
+					<button class="outsetBtn">Get Lifetime Membership</button>
+				</div>
+			</div>
+		</div>
+
+		<!-- divider -->
+		<div class="dividerContainer">
+			<div class="divider"></div>
+		</div>
+
+		<!-- Recent News, only on mobile view -->
+		<div
+			id="carouselNews"
+			class="carousel slide carousel-dark carouselNewsContainer"
+		>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<div class="card" style="width: 18rem">
+						<img
+							src="./images/rollsReportNov2023.jpeg"
+							class="card-img-top"
+							alt="rolls report image"
+						/>
+						<div class="card-body">
+							<h5 class="card-title">Rolls Report:</h5>
+							<p class="card-text">Nov 23, 2023</p>
+						</div>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<div class="card" style="width: 18rem">
+						<img
+							src="./images/sunriseNov4.jpeg"
+							class="card-img-top"
+							alt="news image"
+						/>
+						<div class="card-body">
+							<h5 class="card-title">Title of News Article</h5>
+							<p class="card-text">Card 2</p>
+						</div>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<div class="card" style="width: 18rem">
+						<img
+							src="./images/SDC Flagger.jpeg"
+							class="card-img-top"
+							alt="newsimage"
+						/>
+						<div class="card-body">
+							<h5 class="card-title">Title of News Article</h5>
+							<p class="card-text">Card 3</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<button
+				class="carousel-control-prev"
+				type="button"
+				data-bs-target="#carouselNews"
+				data-bs-slide="prev"
+			>
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button
+				class="carousel-control-next"
+				type="button"
+				data-bs-target="#carouselNews"
+				data-bs-slide="next"
+			>
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
+		</div>
+
+		<!-- divider -->
+		<div class="dividerContainer">
+			<div class="divider"></div>
+		</div>
+
+		<!-- homepage basics -->
+		<div class="row gx-2 homepageBasics">
+			<div class="col-6 overlayContainer">
+				<div class="card text-bg-dark">
+					<img
+						src="./images/BAAimage.jpeg"
+						class="overlayImg"
+						alt="image of BAA"
+					/>
+					<div class="card-img-overlay">
+						<h5 class="card-title">Who is BAA?</h5>
+						<p class="card-text">
+							<small
+								>We are an Alumni Intertest Group from Carnegie Mellon
+								University in Pittsburgh, PA.</small
+							>
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-6 overlayContainer">
+				<div class="card text-bg-dark">
+					<img
+						src="./images/buggy.jpg"
+						id="buggyImg"
+						class="overlayImg"
+						alt="image of buggy"
+					/>
+					<div class="card-img-overlay">
+						<h5 class="card-title">What is Buggy?</h5>
+						<p class="card-text">
+							<small
+								>Buggies are small, low, aerodynamic vehicles, powered only by
+								gravity and human pushers</small
+							>
+						</p>
+					</div>
+				</div>
+			</div>
+        </div>
+        <!-- divider -->
+		<div class="dividerContainer">
+			<div class="divider"></div>
+		</div>
+        <div class="row">
+			<div class="col-12">
+				<iframe
+					style="border-radius: 12px"
+					src="https://open.spotify.com/embed/show/3wbaYb92dfzuWDUbOOxHWi?utm_source=generator"
+					width="100%"
+					height="200"
+					frameborder="0"
+					allowfullscreen=""
+					allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+					loading="lazy"
+				></iframe>
+			</div>
+		</div>
+
+		<!-- divider -->
+		<div class="dividerContainer">
+			<div class="divider"></div>
 		</div>
 
 		<!-- Bootstrap Popper and JS link -->
